--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>This is header</h1>
 <h1>This is new feature</h1>  
 <p>This is paragraph1</p>  
-<p>This is paragraph2</p>  
+<p>This is paragraph2</p>
+<h1>This is new commit</h1>   
 </body> 
